# templify

./: .gitignore  .mlc_config.json  .pre-commit-config.yaml  404.html  DEVELOP.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  codecov.yaml  index.html  mkdocs.yml  package.json  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  static.yml
DEVELOP/: index.html
IMPLEMENTATION_PLAN/: index.html
INSTALL/: index.html
development/architecture/: index.html
development/contributing/: index.html
docs/: DEVELOP.md  IMPLEMENTATION_PLAN.md  INSTALL.md  README.md  conf.py  index.md  index.rst
docs/architecture/adr/: 001-json-masking-non-mutating.md  README.md
docs/cv_poc/: alternatives-to-templify.md  data_model.md  validation.md
docs/development/: GITHUB_PAGES.md  architecture.md  contributing.md
docs/reference/: requirements.md
docs/theme/: 404.md
examples/: README.md  ups_shipment_example.py  ups_shipment_templify.py
examples/cv_resume_poc/: README.md
examples/cv_resume_poc/data/: cv_minimal.json5  cv_minimal.yaml
examples/cv_resume_poc/template/: README.md
reference/requirements/: index.html
scripts/: setup-git-config.sh
search/: search_index.json
src/templify/: __init__.py  cli.py  core.py  utils.py
tests/: TESTING.md  conftest.py  test_cli.py  test_core.py  test_jinja2.py  test_ups_shipment_templify.py  test_ups_shipments.py  test_utils.py  test_utils_masking.py  utils.py
tests/fixtures/: jinja2_templates.py
