[tool.poetry]
name = "templify"
version = "0.1.0"
description = "A powerful templating library that supports multiple template formats and data structures"
authors = ["Pieter Kuppens <pieter.kuppens@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pkuppens/templify"
repository = "https://github.com/pkuppens/templify"
documentation = "https://github.com/pkuppens/templify"
packages = [{include = "templify", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jmespath = "^0.10.0"
jinja2 = "^3.1.3"
reportlab = "^4.1.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-macros-plugin = "^1.0.4"
mkdocs-pdf-export-plugin = "^0.5.10"
mkdocs-redirects = "^1.2.1"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-jupyter = "^0.24.1"
pymdown-extensions = "^10.7"
deptry = "^0.12.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.3.1"
jsonschema = "^4.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Increase line length to 132 characters
line-length = 132

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "RUF", "PL"]

# Suppress specific rules, grouped by category
ignore = [
    # Code structure and complexity
    "PLR0911",  # Too many return statements (max 8)
    "PLR0913",  # Too many arguments to function call

    # Type hints and imports
    "N817",     # CamelCase imported as acronym (ElementTree as ET)
    "RUF013",   # Implicit Optional in type hints

    # Code style and readability
    "RET504",   # Unnecessary assignment before return
    "UP035",    # Unnecessary assignment before return
    "UP006",    # Use tuple instead of list for static values

    # Test-specific
    "PLR2004",  # Magic numbers in tests
]

[tool.ruff.lint.isort]
known-first-party = ["templify"]

[tool.ruff.lint.per-file-ignores]
# Ignore imported but unused in __init__.py files
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=templify --cov-report=term-missing"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.poetry.scripts]
templify = "templify.cli:main"
